--- a/package.json
+++ b/package.json
@@ -1,46 +1,30 @@
 {
-  "name": "internship-project",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "~9.1.9",
-    "@angular/common": "~9.1.9",
-    "@angular/compiler": "~9.1.9",
-    "@angular/core": "~9.1.9",
-    "@angular/forms": "~9.1.9",
-    "@angular/platform-browser": "~9.1.9",
-    "@angular/platform-browser-dynamic": "~9.1.9",
-    "@angular/router": "~9.1.9",
-    "rxjs": "~6.5.4",
-    "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.7",
-    "@angular/cli": "~9.1.7",
-    "@angular/compiler-cli": "~9.1.9",
-    "@types/node": "^12.11.1",
-    "@types/jasmine": "~3.5.0",
-    "@types/jasminewd2": "~2.0.3",
-    "codelyzer": "^5.1.2",
-    "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~5.0.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~2.1.0",
-    "karma-jasmine": "~3.0.1",
-    "karma-jasmine-html-reporter": "^1.4.2",
-    "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~3.8.3"
-  }
+    "name": "angular-7-tutorial",
+    "version": "1.0.0",
+    "scripts": {
+        "start": "webpack-dev-server --mode development --open"
+    },
+    "dependencies": {
+        "@angular/common": "^7.2.13",
+        "@angular/compiler": "^7.2.13",
+        "@angular/core": "^7.2.13",
+        "@angular/forms": "^7.2.13",
+        "@angular/platform-browser": "^7.2.13",
+        "@angular/platform-browser-dynamic": "^7.2.13",
+        "@angular/router": "^7.2.13",
+        "core-js": "^3.0.1",
+        "rxjs": "^6.5.1",
+        "zone.js": "^0.9.0"
+    },
+    "devDependencies": {
+        "@types/node": "^11.13.7",
+        "angular2-template-loader": "^0.6.2",
+        "html-webpack-plugin": "^3.2.0",
+        "raw-loader": "^1.0.0",
+        "ts-loader": "^5.4.3",
+        "typescript": "^3.4.4",
+        "webpack": "^4.30.0",
+        "webpack-cli": "^3.3.1",
+        "webpack-dev-server": "^3.3.1"
+    }
 }
