--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,11 +6,12 @@
     "sourceMap": true,
     "declaration": false,
     "downlevelIteration": true,
+    "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "module": "esnext",
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "es2015",
+    "target": "ES5",
     "lib": [
       "es2018",
       "dom"
