--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
     "@types/jquery": "^3.5.0",
+    "angular2-multiselect-dropdown": "^4.6.3",
     "bootstrap": "^4.5.0",
     "jquery": "^3.5.1",
+    "ng-multiselect-dropdown-angular7": "^0.1.5",
     "ng-sidebar": "^9.3.0",
     "ngx-bootstrap": "^5.6.1",
     "rxjs": "~6.5.4",
