--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~9.1.9",
     "@types/jquery": "^3.5.0",
     "bootstrap": "^4.5.0",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
     "ng-sidebar": "^9.3.0",
     "ngx-bootstrap": "^5.6.1",
