--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.0",
+    "chart.js": "^2.9.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-jwt": "^5.3.3",
@@ -43,6 +44,7 @@
     "mongoose": "^5.9.20",
     "ng-multiselect-dropdown-angular7": "^0.1.5",
     "ng-sidebar": "^9.3.0",
+    "ng2-charts": "^2.3.2",
     "ngx-bootstrap": "^5.6.1",
     "rootpath": "^0.1.2",
     "rxjs": "^6.5.5",
