--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "node ./server.js",
-    "frontstart": "ng serve -o",
+    "frontnstart": "ng serve -o",
     "start-dev": "nodemon ./server.js",
     "build": "ng build",
     "test": "ng test",
