--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
   "dependencies": {
     "-": "0.0.1",
     "@angular/animations": "~9.1.9",
+    "@angular/cdk": "^9.2.4",
     "@angular/common": "~9.1.9",
     "@angular/compiler": "~9.1.9",
     "@angular/core": "~9.1.9",
     "@angular/forms": "~9.1.9",
     "@angular/http": "~2.1.2",
+    "@angular/material": "^9.2.4",
     "@angular/platform-browser": "~9.1.9",
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
@@ -47,6 +49,7 @@
     "ng-sidebar": "^9.3.0",
     "ng2-charts": "^2.3.2",
     "ngx-bootstrap": "^5.6.1",
+    "ngx-mat-select-search": "^3.0.1",
     "rootpath": "^0.1.2",
     "rxjs": "^6.5.5",
     "rxjs-compat": "^6.5.5",
