--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
     "@types/jquery": "^3.5.0",
+    "angular-chosen-localytics": "^1.9.3",
     "angular2-multiselect-dropdown": "^4.6.3",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
