--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "@angular/platform-browser": "~9.1.9",
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
+    "@ng-select/ng-select": "^4.0.4",
     "@types/jquery": "^3.5.0",
-    "angular2-multiselect-dropdown": "^4.6.3",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.0",
@@ -43,6 +43,7 @@
     "mongodb-core": "^3.2.7",
     "mongoose": "^5.9.20",
     "ng-apexcharts": "^1.5.0",
+    "ng-multiselect-dropdown": "^0.2.10",
     "ng-multiselect-dropdown-angular7": "^0.1.5",
     "ng-sidebar": "^9.3.0",
     "ng2-charts": "^2.3.2",
