--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/platform-browser": "~9.1.9",
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
+    "@ng-select/ng-select": "^4.0.4",
     "@types/jquery": "^3.5.0",
     "angular-chosen-localytics": "^1.9.3",
     "angular2-multiselect-dropdown": "^4.6.3",
