--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "bootstrap": "^4.5.0",
     "chart.js": "^2.9.3",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-jwt": "^5.3.3",
     "firebase-admin": "^9.0.0",
